<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softdesign.devintensive.ui.activities.MainActivity"
    tools:ignore="ContentDescription,RtlHardcoded">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/user_profile_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/user_photo"
                    />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:theme="@style/AppTheme.PopupOverlay"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginTop="@dimen/size_small_24"
                    android:titleTextColor="@color/white"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@color/grey_light"
                    android:orientation="horizontal"
                    android:paddingBottom="24dp"
                    android:paddingTop="24dp"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/rate_tv"
                            style="@style/user_info.value"
                            android:text="5"
                            />

                        <TextView
                            style="@style/user_info.hint"
                            android:text="@string/user_rate"
                            />

                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/line_size"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/lines_tv"
                            style="@style/user_info.value"
                            android:text="5"
                            />

                        <TextView
                            style="@style/user_info.hint"
                            android:text="@string/source_code_lines"
                            />

                    </LinearLayout>

                    <View
                        android:layout_width="@dimen/line_size"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/projects_tv"
                            style="@style/user_info.value"
                            android:text="5"
                            />

                        <TextView
                            style="@style/user_info.hint"
                            android:text="@string/projects"
                            />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small_8"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_call_black_24dp"
                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_big_72"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        >

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/phone_et"
                                style="@style/user_data"
                                android:hint="@string/mobile_phone_hint"
                                android:inputType="phone"
                                android:text="+79224795475"
                                />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/call"
                        style="@style/icon.right"
                        android:src="@drawable/ic_phone_in_talk_black_24dp"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="@dimen/spacing_larger_72"
                    android:background="@color/grey_light"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small_8"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_email_black_24dp"
                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_big_72"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="bottom">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/email_et"
                                style="@style/user_data"
                                android:hint="@string/email_hint"
                                android:inputType="textEmailAddress"
                                android:text="al3xbo@gmail.com"
                                />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_send_black_24dp"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="@dimen/spacing_larger_72"
                    android:background="@color/grey_light"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small_8"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/vk_circle_black_24dp"
                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_big_72"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="bottom">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/vk_et"
                                style="@style/user_data"
                                android:hint="@string/vk_profile_source"
                                android:inputType="textEmailAddress"
                                android:text="vk.com/aboyarkin"
                                />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_remove_red_eye_black_24dp"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="@dimen/spacing_larger_72"
                    android:background="@color/grey_light"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small_8"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/github_circle_black_24dp"
                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="@dimen/size_big_72"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="bottom">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/github_et"
                                style="@style/user_data"
                                android:hint="@string/repository_hint"
                                android:inputType="textEmailAddress"
                                android:text="github.com/AlexeyBo/DevIntensive"
                                />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_remove_red_eye_black_24dp"
                        />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_size"
                    android:layout_marginLeft="@dimen/spacing_larger_72"
                    android:background="@color/grey_light"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_small_8"
                    android:layout_marginTop="@dimen/spacing_small_8"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_person_black_24dp"
                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="bottom">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/bio_et"
                                style="@style/user_data"
                                android:hint="@string/about_hint"
                                android:inputType="textMultiLine"
                                android:text="@string/about"
                                >
                            </EditText>

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_create_black_24dp"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right"
            android:layout_marginRight="@dimen/fab_right_space"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>